tests/sksl/errors/Ossfuzz27650.dsl.glsl
### Compilation failed:

error: expected 'int', but found 'float'

error: unknown identifier 'i'

2 errors
